--- a/main.html
+++ b/main.html
@@ -8,7 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>Because i was interested in this feild</h1>
+	<h1>Why I want to become a developer?</h1>
+	<p> Because i was interested in this feild
+	</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
